--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-# dreaconnect
+# Dreaconnect
+
+<img src="man/figures/logo.png" align="right" height="139" />
 
 <!-- badges: start -->
 <!-- badges: end -->
