--- a/README.Rmd
+++ b/README.Rmd
@@ -39,6 +39,9 @@ This is a basic example which shows you how to solve a common problem:
 library(dreaconnect)
 ## Connect to edw tables
 edw <- edw_connect()
+
+## List EDw Tables
+#list_tables()
 ```
 
 
