--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of dreaconnect is to ...
+The goal of dreaconnect is to make connecting to database through R easier. Some basic utility functions such as listing tables in a database are also included.
 
 ## Installation
 
@@ -35,7 +35,7 @@ devtools::install_github("dormezil/dreaconnect")
 
 This is a basic example which shows you how to solve a common problem:
 
-Connect to EDW database. Be sure to assign connection to variable for later use
+Connect to EDW database. Be sure to assign connection to variable for later use.
 
 ```{r example}
 library(dreaconnect)
@@ -43,15 +43,26 @@ library(dreaconnect)
 edw <- edw_connect()
 ```
 
+Connect to DEVL database. Be sure to assign connection to variable for later use.
+
+```{r}
+library(dreaconnect)
+## Connect to devl tables
+#devl <- devl_connect()
+```
+
+
 
 List tables in database:
 ```{r}
 #list_tables()
+#options include "edw" and "devl". Defaults to "edw"
 ```
 
 
 Connect to table:
 ```{r}
 #location_dim_db <- table_connect(edw, "location_dim")
+#vpk_wide_db <- table_connect(devl, "vpk_wide", "devl")
 ```
 
