updated documentation notes. emphasized connection based on database schema

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of dreaconnect is to make connecting to database through R easier. Some basic utility functions such as listing tables in a database are also included.
+The goal of dreaconnect is to make connecting to database through R easier using drea database schema. Some basic utility functions such as listing tables in a database are also included.
 
 ## Installation
 
